# snare-rhythm-generator

./: .gitignore  CLAUDE.md  CMakeLists.txt  install.bat
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SnareEngine.h
installer/macos/: build_pkg.sh
installer/windows/: snare_installer.iss
